# CalibrationSoft

./: CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile.run  Dockerfile.test  ImagePage.qml  MainPage.qml  ProcessingPage.qml  README.md  assets.qrc  docker-compose.yml  main.cpp  main.qml  qml.qrc  tests.qrc
assets/: camera_parameters.json
sources/: camera.cpp  camera.h  identifiedobject.cpp  identifiedobject.h  logger.cpp  logger.h  processor.cpp  processor.h  tools.cpp  tools.h
tests/: calibration_tests.cpp  test.json
